apps/queen-api-mongo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: queen-api-mongo
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: queen-api-mongo
